--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -57,17 +57,45 @@
     }
 
     .hand {
-      width: 50%;
       height: 6px;
+      width: 50%;
       background: black;
       position: absolute;
       top: 50%;
+      transform-origin: 100%;
+      transform: rotate(90deg);
+      transition: all 0.05s;
+      transition-timing-function: cubic-bezier(0.1, 2.7, 0.58, 1);
     }
 
   </style>
 
   <script>
-
+    const secondHand = document.querySelector(".second-hand");
+    const minuteHand = document.querySelector(".min-hand");
+    const hourHand = document.querySelector(".hour-hand");
+    function setDate() {
+      const now = new Date();
+      const seconds = now.getSeconds();
+      if (seconds === 0) {
+        secondHand.style.transition = "none";
+        minuteHand.style.transition = "none";
+        hourHand.style.transition = "none";
+      } else {
+        secondHand.style.transition = "all 0.05s cubic-bezier(0.1, 2.7, 0.58, 1)";
+        minuteHand.style.transition = "all 0.05s cubic-bezier(0.1, 2.7, 0.58, 1)";
+        hourHand.style.transition = "all 0.05s cubic-bezier(0.1, 2.7, 0.58, 1)";
+      }
+      const minutes = now.getMinutes();
+      const hours = now.getHours();
+      const secondsDegrees = ((seconds / 60) * 360) + 90;
+      const minutesDegrees = ((minutes / 60) * 360) + 90;
+      const hoursDegrees = ((hours / 12) * 360) + 90;
+      secondHand.style.transform = `rotate(${secondsDegrees}deg)`;
+      minuteHand.style.transform = `rotate(${minutesDegrees}deg)`;
+      hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
+    }
+    setInterval(setDate, 1000);
 
   </script>
 </body>
